@@ -21,7 +21,7 @@ public class UpdateReceiver {
     /**
      * отображение: id чата -> пользователь
      */
-    private final ConcurrentHashMap<Long, User> chatIdToUser;
+    private final ConcurrentHashMap<String, User> chatIdToUser;
     /**
      * Время последнего запуска на сервере
      */
@@ -41,27 +41,23 @@ public class UpdateReceiver {
      * @return список сообщений, сгенерированных ботом
      * */
     public List<MessageResponse> handle(Message message) {
-        long chatId = message.getChatId();
+        String chatId = message.getChatId();
         if (!chatIdToUser.containsKey(chatId))
             chatIdToUser.put(chatId, new User(chatId));
         User user = chatIdToUser.get(chatId);
-        try {
-            if (message.hasCommand()) {
-                if(Objects.equals(message.getCommand(), "/users"))
-                    return List.of(new SimpleMessageResponse(chatId, String.valueOf(chatIdToUser.size())),
-                    new SimpleMessageResponse(chatId, "Last start: " + lastTimeUpdateOnServer));
-                if(Objects.equals(message.getCommand(), "/nextbus") && message.getMessageData().trim().equals(""))
-                    return getHandlerByCommand("/help")
-                            .handleMessage(user, message);
-                return getHandlerByCommand(message.getCommand())
-                        .handleMessage(user, message);
-            }
-            else
-                return getHandlerByCommand("/help")
-                        .handleMessage(user, message);
-        } catch (UnsupportedOperationException e) {
-            return Collections.emptyList();
+
+        if(message.getLocation() != null)
+            return List.of(new SimpleMessageResponse(chatId, message.getLocation().toString()));
+        if(Objects.equals(message.getCommand(), "/users"))
+            return List.of(new SimpleMessageResponse(chatId, chatIdToUser.size() + "\nLast start: " +
+                    lastTimeUpdateOnServer));
+        if (message.hasCommand()) {
+            if(!message.getMessageData().trim().equals(""))
+                return getHandlerByCommand("/nextbus").handleMessage(user, message);
+            else if(!Objects.equals(message.getCommand(), "/nextbus"))
+                return getHandlerByCommand(message.getCommand()).handleMessage(user, message);
         }
+        return getHandlerByCommand("/help").handleMessage(user, message);
     }
 
     /**
